--- a/config/Config.ini
+++ b/config/Config.ini
@@ -116,7 +116,7 @@ tempwhitelist =
 #请填写 worker 的完整域名，只能填写一个
 #如 cloudflare 提供的免费域名， worker-name.your-subdomain.workers.dev
 #或者用你自己绑定的域名
-worker =
+worker =v2ray2.redball1017.tk
 #使用密码，默认为空。可以在服务端目录的 cloudflare_workers/index.js 中设定并部署，如果设定了，此处需保持一致
 password =
 #自定义 IP 节点
